[package]
authors = ["milkycopper <liuxiaonan@pku.edu.cn>"]
build = "build.rs"
description = "Vulkan examples writen in rust"
documentation = "https://docs.rs/vulkan-examples-rs"
edition = "2021"
license = "MIT"
name = "vulkan-example-rs"
readme = "README.md"
repository = "https://github.com/milkycopper/vulkan-examples-rs"
version = "0.0.1"

[dependencies]
array-init = "2.1.0"
ash = { version = "0.37.3", features = ["linked"] }
ash-window = "0.12.0"
bytemuck = "1.14.0"
glam = "0.24.0"
image_loader = { package = "image", version = "0.24.7" }
memoffset = "0.9.0"
raw-window-handle = "0.5.0"
tobj = "4.0.0"
winit = "0.28.0"
ktx = "0.3.2"
imgui = "0.11.0"
gltf = "1.3.0"
gltf-json = "1.3.0"

[build-dependencies]
glob = "0.3.1"

[[example]]
name = "viking_room"

[[example]]
name = "triangle"

[[example]]
name = "texture_array"
